$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-09-01 [B] Fixed old-style rating system and cleaned up rating system code {Paver}
2009-09-01 [O] Removed raw HTML lines from theme_display_fullsize_pic {Paver}
2009-08-31 [B] Fixed permission check in crop/rotate wrongly denying access {Nibbler}
2009-08-28 [A] Added js function strip_tags  to strip html while showing error in js alert {Abbas}
2009-08-26 [A] Added back in "move to top/bottom" to album & picture managers {Paver}
2009-08-26 [C] Cleaned up picture manager display including toggle buttons to show/hide thumbnails {Paver}
2009-08-26 [B] Fixed the issue of proper handling of php's native error during upload process (flash) {Abbas}
2009-08-25 [B] Fixed sorting bugs in album and picture managers (thread ID 61352) {Paver}
2009-08-25 [B] Fixed caching issues with xp publisher {Nibbler}
2009-08-25 [B] Fixed issue with creating albums in xp publisher with MySQL's strict mode enabled {Nibbler}
2009-08-25 [B] Fixed bridge issue when creating albums in xp publisher {Nibbler}
2009-08-23 [A] Displaying thumbnail on picture manager (thread ID 61340) {GauGau}
2009-08-21 [B] Fixed issue when viewing pictures of meta albums (thread ID 61265) {eenemeenemuu}
2009-08-20 [B] Added function to bring jquery library to top of JavaScript includes list {GauGau}
2009-08-14 [S] Added form token to plug-in manager {eenemeenemuu}
2009-08-12 [O] Disallowed zero as possible value for number of login attempts option {GauGau}
2009-08-06 [A] Added plugin hooks 'smilies_display' & 'smilies_process' {eenemeenemuu}
2009-08-04 [B] Fixed sloppy coding in album manager {GauGau}